--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -23,7 +23,8 @@
         <android.support.design.widget.TabLayout
             android:layout_width="match_parent"
             android:id="@+id/tab_layout"
-            app:tabMode="fixed"
+            app:tabMode="scrollable"
+
             app:tabGravity="fill"
             android:layout_height="wrap_content">
 
